# extract_http

./: .gitignore  README.md  setup.cfg
src/bim_manufacturer_scraper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/extract_http/: __init__.py  bin.py  defaults.py  exceptions.py  extract.py  html_node.py  html_table.py  record_dict.py  transform.py
src/extract_http.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/http_extract.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_extract_http.py
test/data/: erco_article_11130.json  erco_specsheet_A2000292.json  intel_alderlake_config.json  intel_alderlake_table.html  intel_alderlake_table.json  intel_alderlake_table.pickle  ridi_sku_list_zug.json
