[metadata]
name = extract_http
version = 0.0.1

[options]
python_requires = >= 3.8
package_dir=
    =src
include_package_data = True
packages = find:
install_requires =
    beautifulsoup4 >= 4.9.3
    PyYAML >= 6.0
    importlib; python_version == "3.8"

[options.packages.find]
where=src

[options.package_data]
* = data/*.*